<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="txt_sky">
        <item>Clear</item>
        <item>Partly cloudy</item>
        <item>Cloudy</item>
        <item>Rain</item>
        <item>Lightning</item>
        <item>Snow</item>
    </string-array>
    <string-array name="wind_direction">
        <item>Calm</item>
        <item>North</item>
        <item>North-East</item>
        <item>East</item>
        <item>South-East</item>
        <item>South</item>
        <item>South-West</item>
        <item>West</item>
        <item>North-West</item>
    </string-array>
    <string name="app_name">Weather</string>
    <string name="mow">Moscow</string>
    <string name="prg">Prague</string>
    <string name="par">Paris</string>
    <string name="ber">Berlin</string>
    <string name="lon">London</string>
    <string name="ams">Amsterdam</string>
    <string name="ath">Athens</string>
    <string name="mad">Madrid</string>
    <string name="vie">Vienna</string>
    <string name="bud">Budapest</string>
    <string name="bru">Brussel</string>
    <string name="waw">Warsaw</string>
    <string name="beg">Belgrade</string>
    <string name="rom">Rome</string>
    <string name="bts">Bratislava</string>
    <string name="dub">Dublin</string>
    <string name="zag">Zagreb</string>
    <string name="msq">Minsk</string>
    <string name="iev">Kiev</string>
    <string name="cloudly">Cloudly</string>
    <string name="degree" translatable="false">u00B0</string>
    <string name="choice_city">Enter a city</string>
    <string name="settings">Settings</string>
    <string name="extra_parameters">Extra parametres</string>
    <string name="sun_moon">The Sun and the Moon</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="wind">Wind</string>
    <string name="m_s">m/s</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="mmHg">mmHg</string>
    <string name="last_cities">Last viewed cities</string>
    <string name="theme">Theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="wiki">https://en.wikipedia.org/wiki/</string>
    <string name="browser_abs">Browser not found</string>
    <string name="lang">en</string>
    <string name="error_connection">Error connection</string>
    <string name="select_city">Select city</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="about_app">About application</string>
    <string name="version">Version</string>
    <string name="developer">Developer</string>
    <string name="weather">Weather</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="sort_by_city">Sort by city</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_temperature">Sort by temperature</string>
    <string name="cancel">Cancel</string>
    <string name="search_history">Search history</string>
    <string name="data_error">Error receiving data</string>
    <string name="connection_lost">Connection lost</string>
    <string name="connection_abs">Internet is available</string>
    <string name="refresh_weather">Do you want to refresh weather?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="battery_low">Battery low</string>
</resources>